# layrz-protocol

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md
.github/workflows/: checks.yaml  checks.yml  deploy.yaml  deploy.yml
cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  library.json
cpp/cmake/: LayrzProtocolConfig.cmake.in
cpp/examples/: encode_decode.cpp  tcp_client.cpp
cpp/examples/servers/: http_server.cpp  tcp_server.cpp
cpp/include/layrz_protocol/: crc.hpp  errors.hpp  extras.hpp  float_repr.hpp  layrz_protocol.hpp  parser.hpp
cpp/include/layrz_protocol/ble/: advertisement.hpp  manufacturer_data.hpp  service_data.hpp
cpp/include/layrz_protocol/packets/: ab.hpp  ac.hpp  ao.hpp  ar.hpp  as.hpp  au.hpp  ble_data.hpp  command.hpp  firmware_branch.hpp  im.hpp  pa.hpp  pb.hpp  pc.hpp  pd.hpp  pi.hpp  pm.hpp  position.hpp  pr.hpp  ps.hpp  te.hpp  ts.hpp
cpp/include/layrz_protocol/servers/: http.hpp  tcp.hpp
cpp/include/layrz_protocol/transport/: http_comm.hpp  tcp_comm.hpp
cpp/scripts/: cross_check.py  gen_pb_pm_fixtures.py
cpp/src/: crc.cpp  extras.cpp  float_repr.cpp  parser.cpp
cpp/src/ble/: advertisement.cpp  ble_advertisement.cpp  ble_manufacturer_data.cpp  ble_service_data.cpp  manufacturer_data.cpp  service_data.cpp
cpp/src/exceptions/: command_exception.cpp  crc_exception.cpp  malforemd_exception.cpp  parse_exception.cpp  server_exception.cpp  unimplemented_exception.cpp
cpp/src/helpers/: crc.cpp  strings.cpp
cpp/src/include/ble/: ble_advertisement.h  ble_manufacturer_data.h  ble_service_data.h
cpp/src/include/exceptions/: command_exception.h  crc_exception.h  malformed_exception.h  parse_exception.h  server_exception.h  unimplemented_exception.h
cpp/src/include/helpers/: crc.h  strings.h
cpp/src/include/packets/: base_packet.h  pb_client_packet.h  pc_client_packet.h
cpp/src/packets/: ab.cpp  ac.cpp  base_packet.cpp  ble_data.cpp  command.cpp  helpers.hpp  pb.cpp  pb_client_packet.cpp  pc_client_packet.cpp  pd.cpp  pi.cpp  pm.cpp  ps.cpp  simple.cpp
cpp/src/servers/: http.cpp  tcp.cpp
cpp/src/transport/: http_comm.cpp  tcp_comm.cpp
cpp/tests/: CMakeLists.txt  ble_test.cpp  crc_test.cpp  extras_test.cpp  float_repr_test.cpp  http_server_test.cpp  parser_client_input_test.cpp  roundtrip_test.cpp  tcp_server_test.cpp
cpp/tests/fixtures/: canonical_frames.hpp  canonical_frames_generated.hpp
dart/: .gitignore  CHANGELOG.md  Makefile  README.md  analysis_options.yaml  build.yaml  deploy.py  pubspec.yaml
dart/drift_schemas/link_database/: drift_schema_v1.json
dart/example/servers/http/: main.dart
dart/example/servers/tcp/: main.dart
dart/lib/: layrz_protocol.dart
dart/lib/clients/: http.dart  tcp.dart
dart/lib/database/: database.dart  message.dart
dart/lib/packets/: ai.dart  client.dart  packets.dart  server.dart  trips.dart
dart/lib/packets/ai/: im.dart
dart/lib/packets/client/: pa.dart  pb.dart  pc.dart  pd.dart  pi.dart  pm.dart  pr.dart  ps.dart
dart/lib/packets/server/: ab.dart  ac.dart  ao.dart  ar.dart  as.dart  au.dart
dart/lib/packets/trips/: te.dart  ts.dart
dart/lib/packets/utils/: ble_advertisement.dart  ble_models.dart  command.dart  firmware_branch.dart  position.dart
dart/lib/servers/: http.dart  tcp.dart
dart/lib/src/clients/: http.dart  tcp.dart
dart/lib/src/database/: database.dart  database.g.dart
dart/lib/utils/: constants.dart  crc.dart  errors.dart  protocol.dart
dart/test/: ab_test.dart  ac_test.dart  ao_test.dart  ar_test.dart  as_test.dart  au_test.dart  command_test.dart  database_test.dart  errors_test.dart  http_client_test.dart  http_server_test.dart  im_test.dart  pa_test.dart  packet_dispatcher_test.dart  packet_error_paths_test.dart  parsers_test.dart  pb_test.dart  pc_test.dart  pd_test.dart  pi_test.dart  pm_test.dart  pr_test.dart  protocol_enums_test.dart  ps_test.dart  tcp_client_test.dart  tcp_server_test.dart  te_test.dart  ts_test.dart
go/: Makefile  ac.go  ar.go  args.go  connectors_test.go  extra_test.go  go.mod  go.sum  http.go  im.go  parser.go  pb.go  pc.go  pd.go  pm.go  pr.go  ps.go  roundtrip_test.go  tcp.go  te.go  ts.go
go/clients/: http.go  http_test.go  parser.go  parser_test.go  tcp.go  tcp_test.go
go/definitions/: ble_advertisement.go  ble_data.go  command.go  firmware_branch.go  position.go
go/examples/: Makefile  go.mod  go.sum  helpers.go  http.go  main.go  packets.go  tcp.go
go/internal/wire/: args.go  args_test.go  crc.go  crc_test.go
go/packets/ai/: decode.go  decode_test.go  im.go  im_test.go  union.go  union_test.go
go/packets/client/: decode.go  decode_test.go  pa.go  pa_test.go  pb.go  pb_test.go  pc.go  pc_test.go  pd.go  pd_test.go  pi.go  pi_test.go  pm.go  pm_test.go  pr.go  pr_test.go  ps.go  ps_test.go  testhelpers_test.go  union.go  union_test.go
go/packets/helpers/: split.go  split_test.go
go/packets/server/: ab.go  ab_test.go  ac.go  ac_test.go  ao.go  ao_test.go  ar.go  ar_test.go  as.go  as_test.go  au.go  au_test.go  decoder.go  decoder_test.go  testhelpers_test.go  union.go  union_test.go
go/packets/trips/: decode.go  decode_test.go  te.go  te_test.go  ts.go  ts_test.go  union.go  union_test.go
go/servers/: http.go  http_test.go  tcp.go  tcp_test.go
golang/examples/: go.mod  go.sum  helpers.go  http.go  packets.go  tcp.go
golang/v2/: README.md  ac.go  ao.go  args.go  au.go  crc.go  go.mod  parser.go  pb.go  tcp.go
golang/v3/: ab.go  as.go  au.go  go.mod  http.go  pa.go  pd.go  pi.go  ps.go  tcp.go
python/: .env  .gitignore  CHANGELOG.md  Makefile  deploy.py  pyproject.toml
python/layrz_protocol/: __init__.py
python/layrz_protocol/packets/: __init__.py
python/layrz_protocol/servers/: __init__.py  http.py  tcp.py
python/layrz_protocol/utils/: parsers.py
python/tests/: test_10_im.py  test_11_error_branches.py  test_13_parsers.py  test_14_exceptions.py  test_15_validators.py  test_16_tcp_server.py  test_17_http_server.py  test_3_connection.py  test_5_trips.py  test_7_client_extra.py  test_8_server_extra.py  test_9_ble.py
scripts/: coverage-summary.sh  gocov2lcov.sh
(+33 files in other folders)
